--- a/home_page/nila_home_page.css
+++ b/home_page/nila_home_page.css
@@ -219,38 +219,65 @@
 }
 
 .bottom-card-layout {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-  margin: 0 auto;
-  width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    margin: 0 auto;
+    gap: 1rem;
+}
+
+.bottom-card-layout-mobile  {
+    display: none;
+    margin: 0 auto;
+    width: 80%;
+}
+
+
+.card-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .card-container {
-  background-color: #1b1f2a;
-  border-radius: 20px;
-  padding: 40px;
+    background-color: #1b1f2a;
+    border-radius: 20px;
+    padding: 40px;
+    width: 392px;
+    transition: all 0.3s ease-in;
 }
 
 .card-media {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 60px;
-  height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    height: 200px;
 }
 
 .card-content {
-  line-height: 1.4;
+    line-height: 1.4;
+    text-align: center;
 }
 
 .card-desc {
-  line-height: 1.6;
-  letter-spacing: 0.6px;
+    line-height: 1.6;
+    font-size: 18px;
+    letter-spacing: 0.6px;
+    max-height: 0px;
+    opacity: 0;
+    transition: all 0.3s ease-in;
 }
 
 .card-title {
-  padding-bottom: 15px;
+  font-size: 24px;
+    padding-bottom: 15px;
+}
+
+.card-container:hover .card-desc {
+  max-height: 200px;
+  opacity: 1;
 }
 
 /* /Prototype Section/ */
@@ -876,16 +903,22 @@
     padding-bottom: 0;
   }
 
-  .bottom-card-layout {
+  .bottom-card-layout-mobile {
+    display: grid;
+    gap: 1rem;
+    margin: 0 auto;
+    width: 90%;
     grid-template-columns: 1fr;
   }
 
   .bottom-card-layout {
     width: 90%;
+    display: none;
   }
 
   .card-container {
     padding: 40px;
+    width: 100%;
   }
 
   .card-title {
@@ -896,6 +929,9 @@
   .card-desc {
     font-size: 16px;
     line-height: 1.3;
+    max-height: 200px;
+    opacity: 1;
+    height: auto;
   }
 
   .card-media {
